# lickey

./: README.md
src/: lickey.sln
src/lickey/: .gitignore  CMakeLists.txt  CryptoUtility.cpp  CryptoUtility.h  Date.cpp  Date.h  FeatureInfo.cpp  FeatureInfo.h  FeatureVersion.cpp  FeatureVersion.h  Features.cpp  Features.h  FileUtility.cpp  FileUtility.h  HardwareKey.cpp  HardwareKey.h  HardwareKeyGetter.cpp  HardwareKeyGetter.h  Hash.cpp  Hash.h  License.cpp  License.h  LicenseManager.cpp  LicenseManager.h  Log.h  Salt.cpp  Salt.h  Smbios.h  Version.cpp  Version.h  lickey.vcxproj  lickey.vcxproj.filters  smbios.hpp  stdafx.h  stdafx.h.hpp
src/lickey_gen/: lickey_gen.vcxproj  main.cpp
src/lickey_standalone/: lickey_standalone.cpp  lickey_standalone.vcxproj  lickey_standalone.vcxproj.filters
src/lickey_test/: CoutRedirect.h  DateTest.h  HardwareKeyTest.h  LicenseManagerTest.h  lickey_test.vcxproj  lickey_test.vcxproj.filters  main.cpp
