FIND_PACKAGE(OpenSSL REQUIRED)
INCLUDE_DIRECTORIES(
        ${OPENSSL_INCLUDE_DIR}
		"Z:\\dev\\boost_1_73_0"
)
ADD_LIBRARY(lickey
        stdafx.cpp
        CryptoUtility.cpp
        FeatureInfo.cpp
        FeatureVersion.cpp
        FileUtility.cpp
        HardwareKey.cpp
        HardwareKeyGetter.cpp
        License.cpp
        Date.cpp
        Features.cpp
        Hash.cpp
        LicenseManager.cpp
        Salt.cpp
        Version.cpp
        )